examples/Python-(FastAPI/Flask)/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-service
spec:
  type: ClusterIP
  selector:
    app: python-app
  ports:
  - name: http
    port: 80
    targetPort: 8000
